Update application branding to ActiveRabbit, enhance error monitoring features, and configure Docker networking

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,3 +102,8 @@ volumes:
   redis_data:
   bundle_cache:
   node_modules:
+
+networks:
+  default:
+    name: bugrabbit_network
+    driver: bridge
