--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Development Dockerfile for ActiveAgent
+# Development Dockerfile for ActiveRabbit
 FROM ruby:3.2.3-slim
 
 # Install system dependencies
