--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore Kamal secrets
+/.kamal/secrets
+
 /app/assets/builds/*
 !/app/assets/builds/.keep
