Add configurations for production environment

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,11 +7,11 @@ image: your-user/activerabbit
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bin/jobs
+    - 5.78.134.55
+  job:
+    hosts:
+      - 5.78.134.55
+    cmd: bundle exec sidekiq -q default -q ingest
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
@@ -35,23 +35,41 @@ registry:
 env:
   secret:
     - RAILS_MASTER_KEY
+    - DATABASE_URL
+    - REDIS_URL
+    - SECRET_KEY_BASE
+    - STRIPE_SECRET_KEY
+    - STRIPE_SIGNING_SECRET
+    - SMTP_PASSWORD
+    - ACTIVERABBIT_DATABASE_PASSWORD
+    - PGHOST
+    - PGPORT
+    - PGUSER
+    - PGPASSWORD
+    - PGDATABASE
   clear:
-    # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
-    # When you start using multiple servers, you should split out job processing to a dedicated machine.
-    SOLID_QUEUE_IN_PUMA: true
+    RAILS_ENV: production
+    RAILS_LOG_TO_STDOUT: true
+    RAILS_SERVE_STATIC_FILES: true
 
-    # Set number of processes dedicated to Solid Queue (default: 1)
-    # JOB_CONCURRENCY: 3
+    # Performance configuration
+    WEB_CONCURRENCY: 2
+    RAILS_MAX_THREADS: 5
 
-    # Set number of cores available to the application on each server (default: 1).
-    # WEB_CONCURRENCY: 2
+    # Sidekiq configuration
+    SIDEKIQ_CONCURRENCY: 10
 
-    # Match this to any external database server to configure Active Record correctly
-    # Use activerabbit-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
+    # Public keys (non-sensitive)
+    STRIPE_PUBLIC_KEY: pk_live_your_stripe_public_key
+    MAILER_FROM_EMAIL: noreply@your-domain.com
+    ALERT_FROM_EMAIL: alerts@your-domain.com
+    SMTP_HOST: smtp.your-provider.com
+    SMTP_PORT: 587
+    SMTP_USERNAME: your-smtp-username
 
-    # Log everything from Rails
-    # RAILS_LOG_LEVEL: debug
+    # Security
+    FORCE_SSL: true
+    RACK_ATTACK_ENABLED: true
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
@@ -92,25 +110,15 @@ builder:
 #   user: app
 
 # Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: redis:7.0
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
+# Database is external (Ubicloud PostgreSQL), so we only need Redis for Sidekiq
+accessories:
+  redis:
+    image: redis:7.0
+    host: 5.78.134.55
+    port: 6379
+    directories:
+      - data:/data
+    env:
+      clear:
+        REDIS_MAXMEMORY: 256mb
+        REDIS_MAXMEMORY_POLICY: allkeys-lru
