--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,6 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: activerabbit_production
-    username: activerabbit
-    password: <%= ENV["ACTIVERABBIT_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: activerabbit_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: activerabbit_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: activerabbit_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
+  # Single database configuration - using Redis for caching and Sidekiq for jobs
