--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,7 +2,7 @@
 service: activerabbit
 
 # Name of the container image.
-image: your-user/activerabbit
+image: ghcr.io/nextsoft-io/activerabbit
 
 # Deploy to these servers.
 servers:
@@ -23,9 +23,9 @@ proxy:
 
 # Credentials for your image host.
 registry:
-  # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  # Using GitHub Container Registry
+  server: ghcr.io
+  username: nextsoft-io
 
   # Always use an access token rather than real password when possible.
   password:
