--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,7 +2,7 @@
 service: activerabbit
 
 # Name of the container image.
-image: ghcr.io/nextsoft-io/activerabbit
+image: nextsoft-io/activerabbit
 
 # Deploy to these servers.
 servers:
@@ -17,9 +17,10 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-proxy:
-  ssl: true
-  host: app.example.com
+# Temporarily disabled SSL for testing - using IP access
+# proxy:
+#   ssl: true
+#   host: app.example.com
 
 # Credentials for your image host.
 registry:
