--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -17,10 +17,9 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-# Temporarily disabled SSL for testing - using IP access
-# proxy:
-#   ssl: true
-#   host: app.example.com
+proxy:
+  ssl: true
+  host: app.activerabbit.ai
 
 # Credentials for your image host.
 registry:
