Enhance project management and onboarding experience
- Add ActiveRabbit self-monitoring configuration to Docker setup.
- Allow access to the projects controller during onboarding.
- Update dashboard to display project stats including open issues and events today.
- Refactor issues controller to track work-in-progress and closed issues.
- Improve onboarding controller to allow gem installation for additional projects.
- Update project controller to show all projects for the current account and include tech stack in project details.
- Enhance views for projects and dashboard with improved layout and statistics display.
- Add tech stack and created date to project details in views.
- Update schema to include tech_stack field in projects table.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,9 @@ services:
       RACK_ENV: development
       # Disable bootsnap in Docker for better file watching
       DISABLE_BOOTSNAP: 1
+      # ActiveRabbit Self-Monitoring Configuration
+      ACTIVERABBIT_SELF_MONITOR_TOKEN: d52be1708750a355818dc4a3b511bb208e8519d262ae3281ab1494dd800df220
+      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 7
     # Enable live reloading
     command: >
       bash -c "
@@ -26,3 +29,6 @@ services:
     environment:
       RAILS_ENV: development
       RACK_ENV: development
+      # ActiveRabbit Self-Monitoring Configuration
+      ACTIVERABBIT_SELF_MONITOR_TOKEN: d52be1708750a355818dc4a3b511bb208e8519d262ae3281ab1494dd800df220
+      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 7
