--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: bundle exec sidekiq -q default -q ingest
+    command: bundle exec sidekiq -q default -q ingest -q alerts
     volumes:
       - .:/app
       - bundle_cache:/usr/local/bundle
