Update ActiveRabbit configuration and improve error handling in jobs
- Modify ActiveRabbit self-monitoring setup to be disabled by default and only enabled when specified.
- Enhance error handling in IssueAlertJob and PerformanceAlertJob by loading issues and events without tenant context, ensuring proper tenant assignment during processing.
- Update logging and exception handling to prevent feedback loops in alert jobs.
- Adjust development environment settings to disable full error reports for better security.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -12,8 +12,9 @@ services:
       # Disable bootsnap in Docker for better file watching
       DISABLE_BOOTSNAP: 1
       # ActiveRabbit Self-Monitoring Configuration
-      ACTIVERABBIT_SELF_MONITOR_TOKEN: 4036a781d892979a3e98477442518938a798c7c8fba2cef3e6309299b9a9c16a
-      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 8
+      RAILS_LOG_LEVEL: debug
+      ACTIVERABBIT_SELF_MONITOR_TOKEN: 5b39d8f621e18ff2c67e55c5b6d1aadcc5d9131ebb9be874ef4adbffcc6ce550
+      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 32
     # Enable live reloading
     command: >
       bash -c "
@@ -30,5 +31,6 @@ services:
       RAILS_ENV: development
       RACK_ENV: development
       # ActiveRabbit Self-Monitoring Configuration
-      ACTIVERABBIT_SELF_MONITOR_TOKEN: 4036a781d892979a3e98477442518938a798c7c8fba2cef3e6309299b9a9c16a
-      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 8
+      RAILS_LOG_LEVEL: debug
+      ACTIVERABBIT_SELF_MONITOR_TOKEN: 5b39d8f621e18ff2c67e55c5b6d1aadcc5d9131ebb9be874ef4adbffcc6ce550
+      ACTIVERABBIT_SELF_MONITOR_PROJECT_ID: 32
