Update .gitignore to include additional Kamal secrets and ignore all files in the .kamal directory for improved security and configuration management.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: bundle exec sidekiq -q default -q ingest -q alerts
+    command: bundle exec sidekiq -q default -q ingest -q alerts -q analysis
     volumes:
       - .:/app
       - bundle_cache:/usr/local/bundle
