--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -47,6 +47,8 @@ env:
     - PGUSER
     - PGPASSWORD
     - PGDATABASE
+    - OPENAI_API_KEY
+    - ADMIN_EMAIL_ALLOWLIST
   clear:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
