--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -42,6 +42,7 @@ env:
     - STRIPE_SIGNING_SECRET
     - STRIPE_PUBLIC_KEY
     - STRIPE_PRICE_TEAM_MONTHLY
+    - STRIPE_PRICE_BUSINESS_MONTHLY
     - SMTP_PASSWORD
     - ACTIVERABBIT_DATABASE_PASSWORD
     - PGHOST
@@ -55,6 +56,7 @@ env:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
     RAILS_SERVE_STATIC_FILES: true
+    APP_HOST: app.activerabbit.ai
 
     # Performance configuration
     WEB_CONCURRENCY: 2
