Refactor account creation logic in User model and update deploy configuration
- Simplified account name generation in the User model to handle cases where the email is not present.
- Added environment variables for GitHub and Google OAuth credentials in the deploy configuration.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -38,6 +38,10 @@ env:
     - DATABASE_URL
     - REDIS_URL
     - SECRET_KEY_BASE
+    - GITHUB_CLIENT_ID
+    - GITHUB_CLIENT_SECRET
+    - GOOGLE_CLIENT_ID
+    - GOOGLE_CLIENT_SECRET
     - STRIPE_SECRET_KEY
     - STRIPE_SIGNING_SECRET
     - STRIPE_PUBLIC_KEY
