--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -11,7 +11,7 @@ servers:
   job:
     hosts:
       - 5.78.134.55
-    cmd: bundle exec sidekiq -q default -q ingest
+    cmd: bundle exec sidekiq -q default -q ingest -q alerts
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
