--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -56,6 +56,8 @@ env:
     - PGDATABASE
     - OPENAI_API_KEY
     - ADMIN_EMAIL_ALLOWLIST
+    - RESEND_API_KEY
+    - ALERT_FROM_EMAIL
   clear:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
