--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -71,6 +71,9 @@ env:
     # Sidekiq configuration
     SIDEKIQ_CONCURRENCY: 10
 
+    # Email configuration
+    ALERT_FROM_EMAIL: ALERT_FROM_EMAIL
+
     # Security
     FORCE_SSL: true
     RACK_ATTACK_ENABLED: true
