Add ActiveRabbit self-monitoring configuration and update deploy settings

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -57,6 +57,7 @@ env:
     - OPENAI_API_KEY
     - ADMIN_EMAIL_ALLOWLIST
     - RESEND_API_KEY
+    - ACTIVERABBIT_SELF_MONITOR
 
   clear:
     RAILS_ENV: production
