Remove ActiveRabbit configuration file and update initializer to use APP_REVISION environment variable for deployment tracking

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -38,6 +38,7 @@ env:
     - DATABASE_URL
     - REDIS_URL
     - SECRET_KEY_BASE
+    - APP_REVISION
     - GITHUB_CLIENT_ID
     - GITHUB_CLIENT_SECRET
     - GOOGLE_CLIENT_ID
