Add Slack integration environment variables to deploy configuration

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -59,6 +59,8 @@ env:
     - ADMIN_EMAIL_ALLOWLIST
     - RESEND_API_KEY
     - ACTIVERABBIT_SELF_MONITOR
+    - SLACK_CLIENT_ID
+    - SLACK_CLIENT_SECRET
 
   clear:
     RAILS_ENV: production
