Refactor AI integration to use Anthropic API
- Updated services to replace OpenAI API key references with Anthropic API key.
- Changed API endpoints from OpenAI to Anthropic for chat completions.
- Adjusted request headers and response handling to align with Anthropic's API specifications.
- Updated relevant views and deployment configurations to reflect the new API key requirements.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -55,7 +55,7 @@ env:
     - PGUSER
     - PGPASSWORD
     - PGDATABASE
-    - OPENAI_API_KEY
+    - ANTHROPIC_API_KEY
     - ADMIN_EMAIL_ALLOWLIST
     - RESEND_API_KEY
     - ACTIVERABBIT_SELF_MONITOR
