Refactor AI integration to use Anthropic API
- Updated services to replace OpenAI API references with Anthropic API, including changes to API keys, request URIs, and response handling.
- Enhanced error explanations in the ErrorsHelper for better developer insights.
- Adjusted the GitHub PR service and related components to utilize the new AI functionality, ensuring compatibility with the Anthropic model.
- Updated deployment configuration to include the new ANTHROPIC_API_KEY environment variable.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -56,6 +56,7 @@ env:
     - PGPASSWORD
     - PGDATABASE
     - OPENAI_API_KEY
+    - ANTHROPIC_API_KEY
     - ADMIN_EMAIL_ALLOWLIST
     - RESEND_API_KEY
     - ACTIVERABBIT_SELF_MONITOR
@@ -69,7 +70,6 @@ env:
     # - AWS_SECRET_ACCESS_KEY
     # - AWS_REGION
     # - AWS_S3_BUCKET
-
   clear:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
