Refactor email confirmation process and enhance user management
- Updated the `DeviseMailer` to improve the structure and content of confirmation emails, ensuring a better user experience with clear instructions and branding.
- Added new lifecycle mailer views for various user notifications, including trial expiration, payment failures, and quota nudges, to enhance user engagement and retention.
- Implemented Rake tasks for managing user confirmations, allowing for bulk sending of confirmation emails and confirming users without sending emails.
- Enhanced tests for email delivery and confirmation processes, ensuring robust handling of confirmed and unconfirmed users across various scenarios.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,5 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
-
-      - name: Audit JavaScript dependencies (importmap)
+          bundler-cache: true      - name: Audit JavaScript dependencies (importmap)
         run: bin/importmap audit
