--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,5 +103,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true      - name: Audit JavaScript dependencies (importmap)
+          bundler-cache: true
+
+      - name: Audit JavaScript dependencies (importmap)
         run: bin/importmap audit
