Enhance regression detection job to support account scoping and update CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,10 @@ jobs:
         run: |
           bin/rails db:test:prepare
 
+      - name: Precompile assets
+        run: |
+          bin/rails assets:precompile
+
       - name: Run Minitest suite
         run: |
           bin/rails test test/
