Add email confirmation banner and enhance user experience
- Introduced an email confirmation banner in the admin layout and application layout to remind users to confirm their email addresses.
- Updated the `Devise` initializer to allow unconfirmed users to access the application for 2 days after account creation.
- Enhanced user fixture data to include scenarios for users within and past the grace period for email confirmation.
- Added integration tests to verify the behavior of the confirmation banner and user access based on confirmation status.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -56,7 +56,7 @@ oauth_user:
   super_admin: false
   provider: "github"
   uid: "oauth12345"
-  confirmed_at: nil
+  confirmed_at: <%= Time.current %>
 
 second_owner:
   account: team_account
@@ -81,3 +81,23 @@ trial_user:
   role: "owner"
   super_admin: false
   confirmed_at: <%= Time.current %>
+
+# User within 2-day grace period (created 1 day ago)
+unconfirmed_within_grace_period:
+  account: default
+  email: "grace_period@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password123') %>
+  role: "member"
+  super_admin: false
+  confirmed_at: nil
+  confirmation_sent_at: <%= 1.day.ago %>
+
+# User past grace period (created 3 days ago)
+unconfirmed_past_grace_period:
+  account: default
+  email: "past_grace@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password123') %>
+  role: "member"
+  super_admin: false
+  confirmed_at: nil
+  confirmation_sent_at: <%= 3.days.ago %>
