Enhance account settings functionality and UI
- Added the ability to update the account name directly from the account settings page, including error handling for failed updates.
- Implemented a new method to update the account name when the first project is created, ensuring the account name reflects the project name if it has a generic default.
- Updated the account settings view to include a dedicated section for managing the account name with appropriate form elements and styling.
- Adjusted Sidekiq configuration in the deployment settings for improved performance.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -11,7 +11,7 @@ servers:
   job:
     hosts:
       - 5.78.134.55
-    cmd: bundle exec sidekiq -q default -q ingest -q alerts
+    cmd: bundle exec sidekiq -c 10 -q default -q ingest -q alerts
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
@@ -78,7 +78,7 @@ env:
 
     # Sidekiq configuration
     SIDEKIQ_CONCURRENCY: 10
-    DB_POOL: 12
+    DB_POOL: 25
 
     # Security
     FORCE_SSL: true
