Implement account name update functionality and enhance sidebar state management
- Added a new method in SettingsController to allow account owners to update the account name with appropriate validations and feedback.
- Updated routes to include the new account name update path.
- Enhanced sidebar controller to ensure consistent state management with localStorage and added CSS classes for immediate visual feedback on sidebar state.
- Modified Docker configuration to remove stale server PID files during startup.
- Improved error handling and UI updates in various views for better user experience.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       dockerfile: Dockerfile.dev
     command: >
       bash -c "
+        rm -f tmp/pids/server.pid &&
         bundle exec rails db:prepare &&
         bundle exec rails tailwindcss:build &&
         bundle exec rails server -b 0.0.0.0
