Enhance job failure detection and filtering in Issue model
- Updated the `from_job_failures` scope to utilize a denormalized boolean flag for improved performance, falling back to an expensive subquery only if the column is not present.
- Implemented a `before_save` callback to auto-detect job failures based on controller action patterns.
- Added a new boolean column `is_job_failure` to the issues table to support the enhanced filtering logic.
- Updated the deployment configuration to allow longer timeouts for database migrations and health checks.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -20,6 +20,12 @@ servers:
 proxy:
   ssl: true
   host: app.activerabbit.ai
+  # Allow up to 3 minutes for db:prepare (migrations) + Rails boot before health check fails.
+  # Default is 30s which is too short when migrations run on large tables.
+  deploy_timeout: 180
+  healthcheck:
+    path: /up
+    interval: 1
 
 # Credentials for your image host.
 registry:
