--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -17,12 +17,14 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
+# Allow up to 3 minutes for db:prepare (migrations) + Rails boot before health check fails.
+# Default is 30s which is too short when migrations run on large tables.
+deploy_timeout: 180
+drain_timeout: 30
+
 proxy:
   ssl: true
   host: app.activerabbit.ai
-  # Allow up to 3 minutes for db:prepare (migrations) + Rails boot before health check fails.
-  # Default is 30s which is too short when migrations run on large tables.
-  deploy_timeout: 180
   healthcheck:
     path: /up
     interval: 1
