Enhance error handling and performance metrics in ErrorsController and PerfRollup
- Excluded recent errors from the last minute in the ErrorsController to avoid displaying unprocessed noise.
- Updated pagination to use `pagy_countless` for improved performance, eliminating the need for expensive COUNT queries.
- Introduced composite indexes on the issues table to optimize queries related to error filtering and summary statistics.
- Enhanced the `PerfRollup` model to batch-count related errors in a single query, improving efficiency in rollup data processing.
- Updated tests to reflect changes in error counting logic and ensure accurate metrics are calculated.

--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -10,7 +10,7 @@ open_issue:
   status: "open"
   count: 5
   first_seen_at: <%= 1.day.ago %>
-  last_seen_at: <%= Time.current %>
+  last_seen_at: <%= 5.minutes.ago %>
   closed_at: nil
 
 closed_issue:
