--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -12,12 +12,12 @@ servers:
   job:
     hosts:
       - 5.78.134.55
-    cmd: bundle exec sidekiq -c 20 -q ingest
-  # Low-volume worker — alerts, analysis, mailers, default jobs
+    cmd: bundle exec sidekiq -c 25 -q ingest
+  # Mixed worker — alerts/default first, then helps with ingest overflow
   job-secondary:
     hosts:
       - 5.78.134.55
-    cmd: bundle exec sidekiq -c 10 -q alerts,3 -q default,2 -q analysis -q mailers
+    cmd: bundle exec sidekiq -c 15 -q alerts,5 -q default,3 -q analysis,2 -q mailers -q ingest
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
@@ -91,10 +91,10 @@ env:
     RAILS_MAX_THREADS: 5
 
     # Sidekiq configuration (8 vCPU / 16GB RAM — IO-bound jobs)
-    # job: 20 threads (ingest) + job-secondary: 10 threads (alerts/default/analysis/mailers)
-    # + Puma: 2 workers × 5 threads = 10. Total ~40. Pool = 45 for headroom.
-    SIDEKIQ_CONCURRENCY: 20
-    DB_POOL: 45
+    # job: 25 threads (ingest) + job-secondary: 15 threads (alerts/default/analysis/mailers/ingest)
+    # + Puma: 2 workers × 5 threads = 10. Total ~50. Pool = 55 for headroom.
+    SIDEKIQ_CONCURRENCY: 25
+    DB_POOL: 55
 
     # Security
     FORCE_SSL: true
