Implement data retention policies and enhance account management features
- Introduced data retention logic based on account plans, ensuring free plan users only see recent data (5 days) while paid plans retain data for 31 days.
- Updated various controllers to respect data retention cutoffs when querying events and performance data.
- Enhanced account model to include methods for checking data retention days and whether the account is on a free plan.
- Implemented hard caps for free plan accounts to stop accepting events once the quota is reached, improving resource management.
- Refactored notification services to account for plan-specific features, such as Slack notifications and AI summaries, ensuring clarity in user communications.
- Improved job processing for data retention and event ingestion to align with new retention policies.

--- a/test/fixtures/api_tokens.yml
+++ b/test/fixtures/api_tokens.yml
@@ -13,3 +13,10 @@ inactive_token:
   name: "Inactive Token"
   token: <%= SecureRandom.hex(32) %>
   active: false
+
+free_token:
+  account: free_account
+  project: free_project
+  name: "Free Plan Token"
+  token: <%= SecureRandom.hex(32) %>
+  active: true
