--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -39,5 +39,5 @@ RUN mkdir -p tmp/pids log storage
 # Expose port 3000
 EXPOSE 3000
 
-# Default command
-CMD ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
+# Remove stale PID file and start server
+CMD ["bash", "-c", "rm -f tmp/pids/server.pid && bundle exec rails server -b 0.0.0.0"]
