Update deployment configuration and Rack::Attack initializer
- Added SIDEKIQ_REDIS_URL to the deployment environment variables for Sidekiq configuration.
- Changed RACK_ATTACK_ENABLED to DISABLE_RACK_ATTACK in the deployment configuration to allow for easier toggling of Rack::Attack in production.
- Updated the Rack::Attack initializer to reflect the correct HTTP header for project token authentication, enhancing API request handling.
- Added comments to clarify the purpose of disabling Rack::Attack for debugging purposes.

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -74,6 +74,7 @@ env:
     - ADMIN_EMAIL_ALLOWLIST
     - RESEND_API_KEY
     - ACTIVERABBIT_SELF_MONITOR
+    - SIDEKIQ_REDIS_URL
     - SLACK_CLIENT_ID
     - SLACK_CLIENT_SECRET
     - AR_GH_APP_ID
@@ -98,7 +99,7 @@ env:
 
     # Security
     FORCE_SSL: true
-    RACK_ATTACK_ENABLED: true
+    DISABLE_RACK_ATTACK: true
 
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
 # "bin/kamal logs -r job" will tail logs from the first server in the job section.
